<?xml version="1.0" encoding="utf-8"?>
<resources>

    <style name="BeebdroidTheme" parent="android:Theme.NoTitleBar">
        <item name="android:windowBackground">@null</item>
    </style>

	<dimen name="keyboardAreaHeight">168dp</dimen>

    <string name="app_name">Beebdroid</string>
    <string name="app_name2">the BBC Micro emulator</string>
	<string name="about_lft">by Little Fluffy Toys Ltd</string>
	<string name="about_lft3">www.littlefluffytoys.mobi</string>
	<string name="about_text0">At LFT we grew up with the BBC Micro and we loved it, so we\'re bringing it back to the world! Written by LFT\'s CTO Reuben Scratton so he could play the games that LFT\'s CEO Kenton Price wrote when they were kids. Based on B-Em for Linux by Tom Walker.</string>
	<string name="about_copyright">This FREE and OPEN SOURCE application is licensed under GNU General Public License v2.0 as detailed at http://www.gnu.org/licenses/gpl-2.0.html - we encourage others to assist us in developing Beebdroid further once the source code is publised on Github. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the license for more details.</string>
	<string name="about_games">Beebdroid does not ship with any third party programs - these are accessed via third party websites which have hosted such programs for years. Should any licence holders object to third party websites providing such programs, please contact the third party websites in question. We are furthermore also happy to block the visibility of specific programs within Beebdroid upon written request from product licence holders. We are able to offer an in-app payment solution for your programs in such circumstances - please contact us for details.</string>
	<string name="about_lft_more">See our other apps</string>
    <string name="about_show_next_time">Show this info on startup</string>
	<string name="ok_button">OK</string>
    <string name="hint_load_disks">HINT: press MENU to load disks</string>
    <string name="hint_switch_keyboards">HINT: press MENU to switch keyboards</string>
    <string name="hint_space_to_start">HINT: if a game says \'Press SPACE to start\', just touch the screen!</string>
    <string name="button_switch_keyboard">Switch keyboard</string>
    <string name="button_load_disk">Load Disk</string>
    <string name="button_about">About</string>
</resources>
